// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`download executes as expected if role 2 1`] = `
Object {
  "body": "{\\"data\\":\\"download-url\\"}",
  "headers": Object {
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 200,
}
`;

exports[`download returns a 403 if role 1 1`] = `
Object {
  "body": "{\\"message\\":\\"Unauthorized\\"}",
  "headers": Object {
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 403,
}
`;
